# C-algoritms

first_pack/1lab/: 1lab  CMakeLists.txt  program
first_pack/1lab/src/: logic.c  logic.h  main.c  program
first_pack/1lab/tests/: test.c
first_pack/2lab/: CMakeLists.txt
first_pack/2lab/src/: main.c  prime_utils.c  prime_utils.h
first_pack/2lab/tests/: tests.c
first_pack/3lab/: CMakeLists.txt
first_pack/3lab/src/: main.c  math_oper.c  math_oper.h  validate.c  validate.h
first_pack/3lab/tests/: tests.c
first_pack/5lab/: 5lab  CMakeLists.txt  README.md  out_test_input.txt  test_output_i.txt  test_output_s.txt
first_pack/5lab/src/: file_proc.c  file_proc.h  main.c  utils.c  utils.h
first_pack/7lab/: converter  func.c  input.txt  main.c  output.txt
first_pack/8lab/: func.c  main.c  program
second_pack/1lab/: README.md  finite_representation.c  finite_representation.h  main.c  program
second_pack/2lab/: error_messages.h  main.c  program  string_functions.c  string_functions.h  tests  tests.c  tests_full  tests_full.c  tests_simple  tests_simple.c
second_pack/2lab/tests.dSYM/Contents/Resources/DWARF/: tests
second_pack/3lab/: main.c  over  overprintf.c  overprintf.h
second_pack/4lab/: main.c  over  overscanf.c  overscanf.h  test_input.txt
second_pack/5lab/: example_input.txt  example_output.txt  formatter  main.c  sos.txt  text  text_formatter.c  text_formatter.h
second_pack/6lab/: main.c  student  student.c  student.h  students.txt
third_pack/1lab/: Makefile  dec_to_base.c  dec_to_base.h  main.c  number_converter
third_pack/2lab/: Makefile  main_int_vector.c  vector.c  vector.h  vector_test
third_pack/3lab/: Makefile  linked_list.c  linked_list.h  liver.c  liver.h  liver_manager  main.c  output_livers.txt  test_livers.txt
third_pack/4-5lab/: Makefile  heap.c  heap.h  main.c  mappings.txt  output_letters.txt  postal_service  postal_service.c  postal_service.h
third_pack/6lab/: Makefile  bracket_checker  brackets.c  brackets.h  main.c
third_pack/7lab/: Makefile  interpreter.c  interpreter.h  main.c  math_interpreter  test_input.txt
